feat(non-gradle): wire AmperContractTest end-to-end against the fixture
Closes the Amper end-to-end task from the original PR handoff. After
`./amper build` the test reads Amper's compiled `kotlin-output/`
directly, synthesises a `daemon-launch.json` that swaps cmp's user-class
dirs for Amper's, and drives a real `SubprocessRenderSessions.renderNow`
on `GreetingKt.Greeting`. The PNG lands on disk and the test asserts it.

Two changes were needed in the fixture for the daemon to load Amper's
classes:

- `module.yaml` now pins `jvm.release: 17`. Amper's default is 21, but
  the daemon JVM runs on JDK 17 — without the override Greeting.class
  is version 65 and the daemon JVM rejects it with
  UnsupportedClassVersionError.
- `samples/amper-cmp-desktop/README.md` documents both the truststore
  AMPER_JAVA_OPTIONS workaround (for sandbox environments with a
  TLS-inspection proxy) and the new end-to-end test entry point.

The test self-skips when prereqs are missing (Amper wrapper not
executable, no `./amper build` outputs, or gradle reference descriptor
absent) so a clean tree doesn't see a hard failure. CI doesn't yet
auto-invoke `./amper build` — that's a follow-up; for now run the test
manually after building the fixture once.

`docs/NON_GRADLE_INTEGRATION.md` updated to point at the new test and
note both gotchas. Verified locally:
`./gradlew :render-session-subprocess:test
--tests AmperContractTest` and `ktfmtCheck` both green.